[gd_scene load_steps=10 format=3 uid="uid://d2w8rs2knl0qi"]

[ext_resource type="Theme" uid="uid://p5aqqo5i5sic" path="res://ui/resources/admintheme.tres" id="1_1e04w"]
[ext_resource type="Script" path="res://scenes/admin/main_menu/right_sidebar.gd" id="2_lm4b5"]
[ext_resource type="Script" path="res://ui/ui_components/buttons/hover_effect.gd" id="3_40udr"]
[ext_resource type="StyleBox" uid="uid://w74vlmo0yyc0" path="res://ui/resources/style_boxes/main_menu_button.tres" id="4_pfsel"]
[ext_resource type="Texture2D" uid="uid://du7xpmp5qx5qk" path="res://ui/resources/images/overlay.png" id="5_fgoqf"]
[ext_resource type="Script" path="res://ui/ui_components/buttons/stats_button_overlay.gd" id="6_corlc"]
[ext_resource type="Script" path="res://ui/ui_components/buttons/credits_button.gd" id="7_vuiey"]
[ext_resource type="Script" path="res://ui/ui_components/buttons/exit_button.gd" id="8_sytww"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ev6vh"]
bg_color = Color(1, 1, 1, 0)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="RightSidebar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1e04w")
script = ExtResource("2_lm4b5")
metadata/_edit_use_anchors_ = true

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.501
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 0.079895
grow_horizontal = 0
grow_vertical = 2
size_flags_horizontal = 8

[node name="ColorRect" type="ColorRect" parent="MarginContainer2"]
layout_mode = 2
color = Color(0.862745, 0.862745, 0.862745, 0.784314)

[node name="VBoxContainer2" type="HBoxContainer" parent="MarginContainer2"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 140
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2/VBoxContainer2/MarginContainer"]
layout_mode = 2

[node name="SceneTitle" type="Label" parent="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "MAIN MENU"

[node name="ButtonMargin" type="MarginContainer" parent="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="ButtonContainer" type="VBoxContainer" parent="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="StartButton" type="Button" parent="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
flat = true
script = ExtResource("3_40udr")

[node name="StartLabel" type="Label" parent="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer/StartButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.003
anchor_right = 0.992
anchor_bottom = 1.0
offset_left = 0.417
offset_top = -5.0
offset_right = -0.112061
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.997053, 0.997053, 0.997053, 1)
theme_override_styles/normal = ExtResource("4_pfsel")
text = "Start"
horizontal_alignment = 1

[node name="OverlayTexture" type="TextureRect" parent="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer/StartButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -11.0
offset_top = -14.0
offset_right = 14.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_fgoqf")
expand_mode = 1

[node name="StatsButton" type="Button" parent="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
flat = true
script = ExtResource("6_corlc")

[node name="StatsLabel" type="Label" parent="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer/StatsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = ExtResource("4_pfsel")
text = "Stats"
horizontal_alignment = 1

[node name="OverlayTexture" type="TextureRect" parent="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer/StatsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -11.0
offset_top = -14.0
offset_right = 14.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_fgoqf")
expand_mode = 1

[node name="CreditsButton" type="Button" parent="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
flat = true
script = ExtResource("7_vuiey")

[node name="CreditsLabel" type="Label" parent="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer/CreditsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_styles/normal = ExtResource("4_pfsel")
text = "Credits"
horizontal_alignment = 1

[node name="OverlayTexture" type="TextureRect" parent="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer/CreditsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -11.0
offset_top = -14.0
offset_right = 14.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_fgoqf")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer"]
layout_mode = 2
theme_override_constants/margin_top = 50

[node name="ExitButton" type="Button" parent="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
flat = true
script = ExtResource("8_sytww")

[node name="ExitLabel" type="Label" parent="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer/ExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_ev6vh")
text = "Exit"
horizontal_alignment = 1
vertical_alignment = 1

[node name="OverlayTexture" type="TextureRect" parent="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer/ExitButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -11.0
offset_top = -14.0
offset_right = 14.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_fgoqf")
expand_mode = 1

[connection signal="mouse_entered" from="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer/StartButton" to="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer/StartButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer/StartButton" to="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer/StartButton" method="_on_mouse_exited"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer/StartButton" to="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer/StartButton" method="_on_pressed"]
[connection signal="mouse_entered" from="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer/StatsButton" to="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer/StatsButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer/StatsButton" to="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer/StatsButton" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer/CreditsButton" to="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer/CreditsButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer/CreditsButton" to="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer/CreditsButton" method="_on_mouse_exited"]
[connection signal="mouse_entered" from="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer/ExitButton" to="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer/ExitButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer/ExitButton" to="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer/ExitButton" method="_on_mouse_exited"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer2/MarginContainer/VBoxContainer/ButtonMargin/ButtonContainer/ExitButton" to="." method="_on_exit_button_pressed"]
